# shipper-dashboard

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml  Dockerfile
backend/src/: app.rs  main.rs  tests.rs
backend/src/db/: pool.rs
backend/src/handlers/: dashboard_handler.rs  mod.rs
backend/src/routes/: dashboard.rs  health.rs  mod.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html
frontend/src/: app.rs  styles.css
frontend/src/api/: client.rs
frontend/src/components/: mod.rs  simple_chart.rs  stat_card.rs
frontend/src/pages/: dashboard.rs
migrations/: 001_create_dashboard_tables.sql  002_seed_initial_data.sql  003_create_batch_summary.sql  004_create_members.sql
shared/: Cargo.toml
shared/src/: lib.rs  models.rs  responses.rs
