[workspace]
members = ["backend", "frontend", "shared"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
console_error_panic_hook = "0.1"
dotenvy = "0.15"
leptos = { version = "0.6", features = ["csr"] }
reqwasm = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "shared" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower_governor = { version = "0.5", features = ["tracing"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wasm-bindgen-futures = "0.4"
